# cosim

./: .dockerignore  .gitignore  .modelscorp.json.example  AGENT_LOOP.md  CLAUDE.md  Dockerfile.agent  LICENSE  Makefile  Procfile  README.md  main.py  pyproject.toml
container/: Dockerfile.agent  Dockerfile.sandbox  agent-hooks.json  conversation_memory.py  modelscorp_agent.py
cosim_agent/: __init__.py  agent.py  mcp_client.py  pyproject.toml
docs/: agent-loop-architecture-v3-plan.md  agent-loop-architecture-v3.md  agent_architecture_review.md  async-jobs.md  blog-post.md  cosim-technical-architecture-and-capabilities.md  honcho-startup.txt  jobs-system.txt  jupyter-plan.md  memory-handling-methods-plan-and-testing.md  memory-handling-methods.md  models-corp-plan.md  multi_agent_power_incentives_requirements.md  plan-power-structure.md  style-guide.md  subsystem-architecture.md  talking-points.md  unit-test-plan.md
docs.agentic-sdlc/: _index.json
examples/: what-happened-when-we-let-11-agents-run-a-company.md
gitlab.bak/: _repos_index.json
issues/: issue_001.md
lib/: agent_backends.py  agent_runner.py  chat_client.py  cli.py  container_orchestrator.py  docs.py  email.py  gitlab.py  job_runner.py  jobs.py  mcp_server.py  memos.py  orchestrator.py  personas.py  response_schema.py  scenario_loader.py  session.py  task_executor.py  tickets.py  webapp.py
scratch/: autonomous_infrastructure_audit.md  briefing_business_plan_executive_summary.txt  briefing_channel_final_push.txt  konflux_emergency_research_findings.md  revised_business_plan_konflux_platform.md  shared-agentic-technical-architecture-research.md  team_channel_continuation.txt
scripts/: build-agent-image.sh
technical/: engineering-channel-summary.txt  (+1 more)
(+320 files in other folders)
