[project]
name = "multi-agent-organization"
version = "0.1.0"
description = "Simulated software organization with AI agent personas collaborating via chat"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk==0.1.48",
    "flask>=3.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "python-dotenv>=1.1",
    "requests>=2.32",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
lint = [
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"lib/webapp/__init__.py" = ["F401"]

[tool.setuptools.packages.find]
include = ["lib*"]
